syntax = "proto3";

package user;

service userService {
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
}

message GetUsersRequest {
  repeated string userIds = 1;
}

message GetUsersResponse {
  bool success = 1;
  repeated User users = 2;
}

message User {
  string userId = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
}
